gl_ext_api.h


typedef char GLchar;

typedef float GLclampf;

typedef float GLfloat;

typedef int GLint;

typedef int GLsizei;

typedef int32_t GLint64;

typedef signed int GLintptr;

typedef signed int GLsizeiptr;

typedef struct __GLsync *GLsync;

typedef unsigned char GLboolean;

typedef unsigned int GLbitfield;

typedef unsigned int GLenum;

typedef unsigned int GLsizei;

typedef unsigned int GLuint64;

typedef unsigned int GLuint;

typedef void GLvoid;

void FramebufferTexture3D(GLenum, GLenum, GLenum, GLuint, GLint, GLint);

void FramebufferRenderbuffer(GLenum, GLenum, GLenum, GLuint);

void GetFramebufferAttachmentParameteriv(GLenum, GLenum, GLenum, GLint *);

void GenerateMipmap(GLenum);

void BlitFramebuffer(GLint, GLint, GLint, GLint, GLint, GLint, GLint, GLint, GLbitfield, GLenum);

void RenderbufferStorageMultisample(GLenum, GLsizei, GLenum, GLsizei, GLsizei);

void FramebufferTextureLayer(GLenum, GLenum, GLuint, GLint, GLint);


void ProgramParameteriARB(GLuint, GLenum, GLint);

void FramebufferTextureARB(GLenum, GLenum, GLuint, GLint);

void FramebufferTextureLayerARB(GLenum, GLenum, GLuint, GLint, GLint);

void FramebufferTextureFaceARB(GLenum, GLenum, GLuint, GLint, GLenum);


void VertexAttribDivisor(GLuint, GLuint);


void MapBufferRange(GLenum, GLintptr, GLsizeiptr, GLbitfield);

void FlushMappedBufferRange(GLenum, GLintptr, GLsizeiptr);


void TexBufferARB(GLenum, GLenum, GLuint);


void BindVertexArray(GLuint);

void DeleteVertexArrays(GLsizei, const GLuint *);

void GenVertexArrays(GLsizei, GLuint *);

GLboolean IsVertexArray(GLuint);


void GetUniformIndices(GLuint, GLsizei, const GLchar* *, GLuint *);

void GetActiveUniformsiv(GLuint, GLsizei, const GLuint *, GLenum, GLint *);

void GetActiveUniformName(GLuint, GLuint, GLsizei, GLsizei *, GLchar *);

GLuint GetUniformBlockIndex(GLuint, const GLchar *);

void GetActiveUniformBlockiv(GLuint, GLuint, GLenum, GLint *);

void GetActiveUniformBlockName(GLuint, GLuint, GLsizei, GLsizei *, GLchar *);

void UniformBlockBinding(GLuint, GLuint, GLuint);


void CopyBufferSubData(GLenum, GLenum, GLintptr, GLintptr, GLsizeiptr);



void DrawElementsBaseVertex(GLenum mode, GLsizei count, GLenum type, const GLvoid *indices, GLint basevertex);

void DrawRangeElementsBaseVertex(GLenum mode, GLuint start, GLuint end, GLsizei count, GLenum type, const GLvoid *indices, GLint basevertex);

void DrawElementsInstancedBaseVertex(GLenum mode, GLsizei count, GLenum type, const GLvoid *indices, GLsizei primcount, GLint basevertex);

void MultiDrawElementsBaseVertex(GLenum mode, const GLsizei *count, GLenum type, const GLvoid* *indices, GLsizei primcount, const GLint *basevertex);


void ProvokingVertex(GLenum mode);


GLsync FenceSync(GLenum condition, GLbitfield flags);

GLboolean IsSync(GLsync sync);

void DeleteSync(GLsync sync);

GLenum ClientWaitSync(GLsync sync, GLbitfield flags, GLuint64 timeout);

void WaitSync(GLsync sync, GLbitfield flags, GLuint64 timeout);

void GetInteger64v(GLenum pname, GLint64 *params);

void GetSynciv(GLsync sync, GLenum pname, GLsizei bufSize, GLsizei *length, GLint *values);


void TexImage2DMultisample(GLenum target, GLsizei samples, GLint internalformat, GLsizei width, GLsizei height, GLboolean fixedsamplelocations);

void TexImage3DMultisample(GLenum target, GLsizei samples, GLint internalformat, GLsizei width, GLsizei height, GLsizei depth, GLboolean fixedsamplelocations);

void GetMultisamplefv(GLenum pname, GLuint index, GLfloat *val);

void SampleMaski(GLuint index, GLbitfield mask);


void BlendEquationi(GLuint buf, GLenum mode);

void BlendEquationSeparatei(GLuint buf, GLenum modeRGB, GLenum modeAlpha);

void BlendFunci(GLuint buf, GLenum src, GLenum dst);

void BlendFuncSeparatei(GLuint buf, GLenum srcRGB, GLenum dstRGB, GLenum srcAlpha, GLenum dstAlpha);


void MinSampleShading(GLclampf value);


void NamedStringARB(GLenum type, GLint namelen, const GLchar *name, GLint stringlen, const GLchar *string);

void DeleteNamedStringARB(GLint namelen, const GLchar *name);

void CompileShaderIncludeARB(GLuint shader, GLsizei count, const GLchar* *path, const GLint *length);

GLboolean IsNamedStringARB(GLint namelen, const GLchar *name);

void GetNamedStringARB(GLint namelen, const GLchar *name, GLsizei bufSize, GLint *stringlen, GLchar *string);

void GetNamedStringivARB(GLint namelen, const GLchar *name, GLenum pname, GLint *params);


void BindFragDataLocationIndexed(GLuint program, GLuint colorNumber, GLuint index, const GLchar *name);

GLint GetFragDataIndex(GLuint program, const GLchar *name);


void GenSamplers(GLsizei count, GLuint *samplers);

void DeleteSamplers(GLsizei count, const GLuint *samplers);

GLboolean IsSampler(GLuint sampler);

void BindSampler(GLenum unit, GLuint sampler);

void SamplerParameteri(GLuint sampler, GLenum pname, GLint param);

void SamplerParameteriv(GLuint sampler, GLenum pname, const GLint *param);

void SamplerParameterf(GLuint sampler, GLenum pname, GLfloat param);

void SamplerParameterfv(GLuint sampler, GLenum pname, const GLfloat *param);

void SamplerParameterIiv(GLuint sampler, GLenum pname, const GLint *param);

void SamplerParameterIuiv(GLuint sampler, GLenum pname, const GLuint *param);

void GetSamplerParameteriv(GLuint sampler, GLenum pname, GLint *params);