gl_ext_api.scm

    (define FramebufferTexture3D
      (foreign-lambda
        void
        "FramebufferTexture3D"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        integer)))
  (begin
    (define FramebufferRenderbuffer
      (foreign-lambda
        void
        "FramebufferRenderbuffer"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define GetFramebufferAttachmentParameteriv
      (foreign-lambda
        void
        "GetFramebufferAttachmentParameteriv"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GenerateMipmap
      (foreign-lambda void "GenerateMipmap" unsigned-integer)))
  (begin
    (define BlitFramebuffer
      (foreign-lambda
        void
        "BlitFramebuffer"
        integer
        integer
        integer
        integer
        integer
        integer
        integer
        integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define RenderbufferStorageMultisample
      (foreign-lambda
        void
        "RenderbufferStorageMultisample"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define FramebufferTextureLayer
      (foreign-lambda
        void
        "FramebufferTextureLayer"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        integer)))
  (begin
    (define ProgramParameteriARB
      (foreign-lambda
        void
        "ProgramParameteriARB"
        unsigned-integer
        unsigned-integer
        integer)))
  (begin
    (define FramebufferTextureARB
      (foreign-lambda
        void
        "FramebufferTextureARB"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer)))
  (begin
    (define FramebufferTextureLayerARB
      (foreign-lambda
        void
        "FramebufferTextureLayerARB"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        integer)))
  (begin
    (define FramebufferTextureFaceARB
      (foreign-lambda
        void
        "FramebufferTextureFaceARB"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer)))
  (begin
    (define VertexAttribDivisor
      (foreign-lambda
        void
        "VertexAttribDivisor"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define MapBufferRange
      (foreign-lambda
        void
        "MapBufferRange"
        unsigned-integer
        integer
        integer
        unsigned-integer)))
  (begin
    (define FlushMappedBufferRange
      (foreign-lambda
        void
        "FlushMappedBufferRange"
        unsigned-integer
        integer
        integer)))
  (begin
    (define TexBufferARB
      (foreign-lambda
        void
        "TexBufferARB"
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define BindVertexArray
      (foreign-lambda void "BindVertexArray" unsigned-integer)))
  (begin
    (define DeleteVertexArrays
      (foreign-lambda void "DeleteVertexArrays" unsigned-integer u32vector)))
  (begin
    (define GenVertexArrays
      (foreign-lambda void "GenVertexArrays" unsigned-integer u32vector)))
  (begin
    (define IsVertexArray
      (foreign-lambda unsigned-char "IsVertexArray" unsigned-integer)))
  (begin
    (define GetUniformIndices
      (foreign-lambda
        void
        "GetUniformIndices"
        unsigned-integer
        unsigned-integer
        (c-pointer (c-pointer (const char)))
        u32vector)))
  (begin
    (define GetActiveUniformsiv
      (foreign-lambda
        void
        "GetActiveUniformsiv"
        unsigned-integer
        unsigned-integer
        u32vector
        unsigned-integer
        s32vector)))
  (begin
    (define GetActiveUniformName
      (foreign-lambda
        void
        "GetActiveUniformName"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        u32vector
        c-string)))
  (begin
    (define GetUniformBlockIndex
      (foreign-lambda
        unsigned-integer
        "GetUniformBlockIndex"
        unsigned-integer
        c-string)))
  (begin
    (define GetActiveUniformBlockiv
      (foreign-lambda
        void
        "GetActiveUniformBlockiv"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetActiveUniformBlockName
      (foreign-lambda
        void
        "GetActiveUniformBlockName"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        u32vector
        c-string)))
  (begin
    (define UniformBlockBinding
      (foreign-lambda
        void
        "UniformBlockBinding"
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define CopyBufferSubData
      (foreign-lambda
        void
        "CopyBufferSubData"
        unsigned-integer
        unsigned-integer
        integer
        integer
        integer)))
  (begin
    (define DrawElementsBaseVertex
      (foreign-lambda
        void
        "DrawElementsBaseVertex"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void)
        integer)))
  (begin
    (define DrawRangeElementsBaseVertex
      (foreign-lambda
        void
        "DrawRangeElementsBaseVertex"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void)
        integer)))
  (begin
    (define DrawElementsInstancedBaseVertex
      (foreign-lambda
        void
        "DrawElementsInstancedBaseVertex"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void)
        unsigned-integer
        integer)))
  (begin
    (define MultiDrawElementsBaseVertex
      (foreign-lambda
        void
        "MultiDrawElementsBaseVertex"
        unsigned-integer
        u32vector
        unsigned-integer
        (c-pointer (c-pointer (const void)))
        unsigned-integer
        s32vector)))
  (begin
    (define ProvokingVertex
      (foreign-lambda void "ProvokingVertex" unsigned-integer)))
  (begin
    (define FenceSync
      (foreign-lambda
        (c-pointer (struct "__GLsync"))
        "FenceSync"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define IsSync
      (foreign-lambda unsigned-char "IsSync" (c-pointer (struct "__GLsync")))))
  (begin
    (define DeleteSync
      (foreign-lambda void "DeleteSync" (c-pointer (struct "__GLsync")))))
  (begin
    (define ClientWaitSync
      (foreign-lambda
        unsigned-integer
        "ClientWaitSync"
        (c-pointer (struct "__GLsync"))
        unsigned-integer
        unsigned-integer)))
  (begin
    (define WaitSync
      (foreign-lambda
        void
        "WaitSync"
        (c-pointer (struct "__GLsync"))
        unsigned-integer
        unsigned-integer)))
  (begin
    (define GetInteger64v
      (foreign-lambda void "GetInteger64v" unsigned-integer s32vector)))
  (begin
    (define GetSynciv
      (foreign-lambda
        void
        "GetSynciv"
        (c-pointer (struct "__GLsync"))
        unsigned-integer
        unsigned-integer
        u32vector
        s32vector)))
  (begin
    (define TexImage2DMultisample
      (foreign-lambda
        void
        "TexImage2DMultisample"
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-char)))
  (begin
    (define TexImage3DMultisample
      (foreign-lambda
        void
        "TexImage3DMultisample"
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-char)))
  (begin
    (define GetMultisamplefv
      (foreign-lambda
        void
        "GetMultisamplefv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define SampleMaski
      (foreign-lambda void "SampleMaski" unsigned-integer unsigned-integer)))
  (begin
    (define BlendEquationi
      (foreign-lambda
        void
        "BlendEquationi"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define BlendEquationSeparatei
      (foreign-lambda
        void
        "BlendEquationSeparatei"
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define BlendFunci
      (foreign-lambda
        void
        "BlendFunci"
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define BlendFuncSeparatei
      (foreign-lambda
        void
        "BlendFuncSeparatei"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define MinSampleShading (foreign-lambda void "MinSampleShading" float)))
  (begin
    (define NamedStringARB
      (foreign-lambda
        void
        "NamedStringARB"
        unsigned-integer
        integer
        c-string
        integer
        c-string)))
  (begin
    (define DeleteNamedStringARB
      (foreign-lambda void "DeleteNamedStringARB" integer c-string)))
  (begin
    (define CompileShaderIncludeARB
      (foreign-lambda
        void
        "CompileShaderIncludeARB"
        unsigned-integer
        unsigned-integer
        (c-pointer (c-pointer (const char)))
        s32vector)))
  (begin
    (define IsNamedStringARB
      (foreign-lambda unsigned-char "IsNamedStringARB" integer c-string)))
  (begin
    (define GetNamedStringARB
      (foreign-lambda
        void
        "GetNamedStringARB"
        integer
        c-string
        unsigned-integer
        s32vector
        c-string)))
  (begin
    (define GetNamedStringivARB
      (foreign-lambda
        void
        "GetNamedStringivARB"
        integer
        c-string
        unsigned-integer
        s32vector)))
  (begin
    (define BindFragDataLocationIndexed
      (foreign-lambda
        void
        "BindFragDataLocationIndexed"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        c-string)))
  (begin
    (define GetFragDataIndex
      (foreign-lambda integer "GetFragDataIndex" unsigned-integer c-string)))
  (begin
    (define GenSamplers
      (foreign-lambda void "GenSamplers" unsigned-integer u32vector)))
  (begin
    (define DeleteSamplers
      (foreign-lambda void "DeleteSamplers" unsigned-integer u32vector)))
  (begin
    (define IsSampler
      (foreign-lambda unsigned-char "IsSampler" unsigned-integer)))
  (begin
    (define BindSampler
      (foreign-lambda void "BindSampler" unsigned-integer unsigned-integer)))
  (begin
    (define SamplerParameteri
      (foreign-lambda
        void
        "SamplerParameteri"
        unsigned-integer
        unsigned-integer
        integer)))
  (begin
    (define SamplerParameteriv
      (foreign-lambda
        void
        "SamplerParameteriv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define SamplerParameterf
      (foreign-lambda
        void
        "SamplerParameterf"
        unsigned-integer
        unsigned-integer
        float)))
  (begin
    (define SamplerParameterfv
      (foreign-lambda
        void
        "SamplerParameterfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define SamplerParameterIiv
      (foreign-lambda
        void
        "SamplerParameterIiv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define SamplerParameterIuiv
      (foreign-lambda
        void
        "SamplerParameterIuiv"
        unsigned-integer
        unsigned-integer
        u32vector)))
  (begin
    (define GetSamplerParameteriv
      (foreign-lambda
        void
        "GetSamplerParameteriv"
